<resources>
    <string name="app_name">Gasto Viagem</string>
    <string name="custo_de_viagem">Custo de Viagem</string>
    <string name="distance">Distância</string>
    <string name="total_km">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">KMs por Litro</string>
    <string name="total_spend">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="calculate">CALCULAR</string>
    <string name="total_value">R$ 0</string>
    <string name="validation_fill_all_fields">Preencha todos os campos.</string>
</resources>